--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 1_Android/asgn2/Assignment2/.gradle/7.5/fileHashes/fileHashes.bin
 1_Android/asgn2/Assignment2/.gradle/7.5/executionHistory/executionHistory.lock
 1_Android/asgn2/Assignment2/.gradle/7.5/executionHistory/executionHistory.bin
+1_Android/asgn2/Assignment2/.gradle/7.5/fileHashes/fileHashes.bin
+*.bin
+*.lock
