--- a/.gitignore
+++ b/.gitignore
@@ -723,3 +723,5 @@
 1_Android/asgn2/Assignment2/.gradle/7.5/fileHashes/fileHashes.bin
 1_Android/asgn2/Assignment2/.gradle/7.5/executionHistory/executionHistory.lock
 1_Android/asgn2/Assignment2/.gradle/7.5/executionHistory/executionHistory.bin
+*.bin
+*.kapt_metadata
