Add input validation to login screen
- Disable login button until both the email and password fields contain at least four characters

- Use TextWatcher to listen for changes in the EditText fields and enable/disable the button accordingly"

--- a/.gitignore
+++ b/.gitignore
@@ -725,3 +725,9 @@
 1_Android/asgn2/Assignment2/.gradle/7.5/executionHistory/executionHistory.bin
 *.bin
 *.kapt_metadata
+*.kapt_metadata
+*.kapt_metadata
+*.bin
+*.lock
+*.probe
+*.txt
