--- a/.gitignore
+++ b/.gitignore
@@ -26689,3 +26689,4 @@
 3_ReactNative/Assignment8/node_modules/yocto-queue/license
 3_ReactNative/Assignment8/node_modules/yocto-queue/package.json
 3_ReactNative/Assignment8/node_modules/yocto-queue/readme.md
+*.zip
