--- a/.gitignore
+++ b/.gitignore
@@ -26690,3 +26690,4 @@
 3_ReactNative/Assignment8/node_modules/yocto-queue/package.json
 3_ReactNative/Assignment8/node_modules/yocto-queue/readme.md
 *.zip
+*.json
